--- a/account-validator/.classpath
+++ b/account-validator/.classpath
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="/Users/pranithreddy/Desktop/6thsem/DataModeling/knowledgeModeling/java-json.jar">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Users/pranithreddy/Desktop/6thsem/DataModeling/knowledgeModeling/apache-tomcat-8.5.29/lib/servlet-api.jar">
+	<classpathentry kind="lib" path="/home/sravya/eclipse-workspace/Libraries/mysql-connector-java-5.1.46/mysql-connector-java-5.1.46-bin.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Users/pranithreddy/Documents/mysql-connector-java-5.1.46/mysql-connector-java-5.1.46-bin.jar">
+	<classpathentry kind="lib" path="/home/sravya/eclipse-workspace/Libraries/java-json.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v7.0"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
